Fix whitespace on bottom of table, add overflow scroll to table

--- a/app/styles/data-table.scss
+++ b/app/styles/data-table.scss
@@ -4,7 +4,7 @@
 
   .data-table-container{
     overflow: visible;
-    top: calc(-50px - 30vh);
+    margin: calc(-50px - 30vh) auto 50px !important;
     position: relative;
     display: flex;
   }
@@ -15,6 +15,9 @@
     z-index: 2;
     flex-basis: 58.33333333%;
     max-width: 58.33333333%;
+    max-height: 500px;
+    max-height: calc(100vh - 50px);
+    overflow: auto;
 
     .DataTable-actions {
       display: flex;
